changed project to jdk8, removed Base64 sun encoder for java8 encoder and removed unused imports